# gradwave

./: .gitignore  .pre-commit-config.yaml  .test_durations  CLAUDE.md  CRASH  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: bench.yml  ci.yml  nightly.yml  profile.yml
bench/: pt_uspp_bench.py
benchmarks/: _capture.py  bench_learned_precond.py  bench_matrix.py  bench_precond.py  bench_scf.py  bench_uspp.py  ci_bench.py  mixer_rig.py  pt_uspp_bench.py  structures.py
benchmarks/delta_factor/: eos_cases.py  eos_fit.py  eos_gw.py  gen_qe.py
benchmarks/delta_factor/results/: eos_gw.json  eos_qe_energies.txt  summary.txt
benchmarks/delta_gauge/: README.md  cases.py  ecut_scan.py  fit_delta.py  lattices.py  make_fig.py  run_gw.py
benchmarks/delta_gauge/results/: cu_anomaly.md  delta_summary.json  dims_Al.json  dims_Ca.json  dims_Cu.json  dims_Ge.json  dims_Ir.json  (+37 more)
benchmarks/derivatives/: README.md  accuracy.json  accuracy.py  make_fig.py
benchmarks/fept_mae_map/: RESULT.txt
benchmarks/hybrid_design/: README.md  gap.py  make_fig.py  train.json  train.py  validate.py
benchmarks/lejaeghere/: .gitignore  README.md  cases.py  fit_delta.py  gen_qe.py  run_gw.py  run_qe.sh
benchmarks/mae_inverse/: README.md  make_fig.py  strain.json  strain.py
benchmarks/nve_drift/: RESULT.txt  nve_si8.py
docs/: ideas.md  io.md  lessons.md  noncollinear.md  optimization-audit.md  performance.md  queue.md  refactor_plan.md  refactor_stage3.md  showcase.md  symbols.txt  todo.md  torch-compile.md  verification.md
docs/manual/: architecture.md  bibliography.md  cookbook.md  error-estimation.md  geometry-optimization.md  hubbard-u.md  hybrid-functionals.md  index.md  installation.md  io.md  learning-xc.md  mae.md  magnetism.md  noncollinear-soc.md  performance.md  postscf-analysis.md  reference.md  symmetry.md  wisdom.md
docs/paper/: .gitignore  paper.tex
docs/plans/: cohp-contracted-basis.md  dos-projections.md
docs/portfolio/: .gitignore  portfolio.tex
examples/: GaAs_cohp_fatbands.json  bader_nacl.py  bi2se3_bands_compare.py  bi2se3_cohp_fatbands.py  bi2se3_inversion.py  bi2se3_inversion_output.txt  bi2se3_soc_bands.json  bi2se3_sr_bands.json  cohp_fatbands.py  diamond_cohp_fatbands.json  eos_silicon.json  eos_silicon.py  fe_exchange.py  fe_spin_spiral.json  fe_spin_spiral.py  fept_bands.yaml  fept_mae.py  fept_mae_force_theorem.py  fept_mae_map.py  fept_relax.yaml  graphene_bands.json  graphene_bands.yaml  hybrid_train.json  hybrid_train.py  input_diamond_relax.yaml  input_o2_magnetism.yaml  input_ptcu_relax.yaml  input_si.yaml  kmesh_error.py  si_paw_phonon.py  si_paw_phonon_analytic.py  si_scf.yaml  spin_spiral_render.py  train_xc_paw.json  train_xc_paw.py  volumetric_density.py
examples/co_pt/: RESULTS.md  bulk_pt_eos.py  slab_co.py
examples/out_diamond/: relax.json  relax.out  relax.xyz
examples/out_si/: scf.json  scf.out
scripts/: dashboard.py  gen_d3_params.py  gen_symbols.py  gen_ylm.py  gwq  gwq_status.py  plot_bands.py  plot_mae.py  worktrees.py
src/gradwave/: __init__.py  _logging.py  analysis.py  api.py  calculator.py  checkpoint.py  cli.py  constants.py  dtypes.py  grids.py  inputs.py  kpoints.py  output.py  runinfo.py  symmetry.py  templates.py
tests/: conftest.py  helpers.py
tests/fixtures/: regenerate_mixer_traj.py
tests/gradcheck/: test_functional_learning.py  test_implicit_scf.py
tests/integration/: test_bands_nc.py  test_bands_nspin2.py  test_bands_vs_qe.py  test_cohp.py  test_convergence_error.py  test_dielectric_nspin2.py  test_dielectric_vs_qe.py  test_discretization_error.py  test_dos.py  test_dos_nspin2.py  test_elastic.py  test_elf_nspin2.py  test_eos.py  test_exchange_multik.py  test_exchange_operator.py  test_fept_mae.py  test_fixed_moment.py  test_forces_nlcc.py  test_forces_nspin2.py  test_forces_vs_qe.py  test_golden_energies.py  test_hubbard_vs_qe.py  test_hybrid_kmesh.py  test_hybrid_scf.py  test_io.py  test_irreps.py  test_isdf_k.py  test_isdf_vs_direct.py  test_johnson_nc.py  test_learned_hybrid.py  test_learned_precond_scf.py  test_local_tf_scf.py  test_mae_force_theorem.py  test_magnetic_ibz.py  test_metagga_scf.py  test_metal_forces_vs_qe.py  test_metamorphic_invariance.py  test_mixed_precision.py  test_moment_config.py  test_newton_polish.py  (+32 more)
tests/unit/: test_bader.py  test_chebyshev.py  test_coulomb_kernel.py  test_dispersion.py  test_elastic_moduli.py  test_energy_hamiltonian_consistency.py  test_eos_fit.py  test_ewald.py  test_exact_limits.py  test_exchange.py  test_gamma.py  test_gauge_invariance.py  test_grids.py  test_hartree.py  test_hubbard.py  test_hybrid_params.py  test_input_validation.py  test_isdf.py  test_learned_precond.py  test_local_tf.py  test_mae_result_io.py  test_magnetic_symmetry.py  test_magnetism.py  test_metagga.py  test_mix_layout.py  test_mixer_trajectories.py  test_mixing_adapt.py  test_moment_penalty.py  test_noncollinear_xc.py  test_occupations.py  test_phonon_symmetry.py  test_phonons_supercell.py  test_postscf_primitives.py  test_r2scan.py  test_radial.py  test_radial_torch.py  test_review_api.py  test_review_core.py  test_review_dedup.py  test_review_errors.py  (+15 more)
(+251 files in other folders)
