[project]
name = "gradwave"
version = "0.1.0"
description = "Differentiable plane-wave DFT for periodic solids in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Will Laderer", email = "wtladerer@gmail.com" }]
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "scipy>=1.12",
    "ase>=3.23",
    "pyyaml>=6",
    "spglib>=2.4",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist",
    "ruff>=0.6",
    "sympy>=1.12",
]

[project.scripts]
gradwave = "gradwave.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gradwave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "standard: seconds-class integration tests, excluded from the fast gate",
    "slow: minutes-class QE-comparison tests, nightly or pre-release",
    "torture: tests over ~10 minutes (spin and FD monsters), run manually when their subsystem changes",
    "gpu: requires CUDA device",
]
# Tiers (docs/refactor_plan.md stage 5). A test carries at most one tier
# marker; unmarked tests are the fast tier by definition.
#   fast gate (<2 min):  pytest -m "not standard and not slow and not torture and not gpu"
#   standard / CI:       pytest -m "not slow and not torture and not gpu"
#   nightly:             pytest -m "not torture and not gpu"
#   torture (manual):    pytest -m torture

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "NPY", "B"]
ignore = ["E741"]  # l is a perfectly good angular momentum variable
