[project]
name = "gradwave"
version = "0.1.0"
description = "Differentiable plane-wave DFT for periodic solids in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Will Laderer", email = "wtladerer@gmail.com" }]
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "scipy>=1.12",
    "ase>=3.23",
    "pyyaml>=6",
    "spglib>=2.4",
]

[project.optional-dependencies]
# gradwave.analysis (frames + plotting) imports these lazily; the core
# package and CLI run without them. Install with: gradwave[analysis]
analysis = [
    "pandas>=3.0.3",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist",
    "ruff>=0.6",
    "sympy>=1.12",
    "pre-commit>=3.5",
    # libxc oracle for the r2SCAN pointwise tests (bundles libxc via its wheel);
    # tests importorskip it, so it is optional — this just enables them in CI.
    "pyscf>=2.4",
    "import-linter>=2.13",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.scripts]
gradwave = "gradwave.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gradwave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -n auto parallelizes across cores via pytest-xdist; pass -n0 to disable when
# debugging a single test and interleaved output gets in the way.
addopts = "-q -n auto"
markers = [
    "standard: seconds-class integration tests, excluded from the fast gate",
    "slow: minutes-class QE-comparison tests, nightly or pre-release",
    "torture: tests over ~10 minutes (spin and FD monsters), run manually when their subsystem changes",
    "gpu: requires CUDA device",
]
# Tiers. A test carries at most one tier
# marker; unmarked tests are the fast tier by definition.
#   fast gate (<2 min):  pytest -m "not standard and not slow and not torture and not gpu"
#   standard / CI:       pytest -m "not slow and not torture and not gpu"
#   nightly:             pytest -m "not torture and not gpu"
#   torture (manual):    pytest -m torture

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "NPY", "B"]
ignore = ["E741"]  # l is a perfectly good angular momentum variable

[tool.importlinter]
root_package = "gradwave"

# Architecture boundaries, encoded from the layering the modules document in
# prose. Run with: uv run lint-imports
[[tool.importlinter.contracts]]
name = "core stays independent of the SCF and analysis layers"
type = "forbidden"
source_modules = ["gradwave.core"]
forbidden_modules = ["gradwave.scf", "gradwave.postscf"]

[[tool.importlinter.contracts]]
name = "pseudo is a leaf package"
type = "forbidden"
source_modules = ["gradwave.pseudo"]
forbidden_modules = ["gradwave.core", "gradwave.scf", "gradwave.postscf", "gradwave.solvers"]

[[tool.importlinter.contracts]]
name = "solvers stay low-level (no SCF/analysis deps)"
type = "forbidden"
source_modules = ["gradwave.solvers"]
forbidden_modules = ["gradwave.scf", "gradwave.postscf"]

[[tool.importlinter.contracts]]
name = "scf does not depend on the analysis layer, except the shared response kernels"
type = "forbidden"
source_modules = ["gradwave.scf"]
forbidden_modules = ["gradwave.postscf"]
ignore_imports = ["gradwave.scf.implicit -> gradwave.postscf._response"]
